--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,48 +21,14 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11:38:04] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Starting corner is LR                                                          <a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">228927557.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py#112\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">112</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[11:38:04]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Starting corner is LR                                                          \u001b]8;id=80514;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py\u001b\\\u001b[2m228927557.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=113348;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py#112\u001b\\\u001b[2m112\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Starting Region Indices: <span style=\"font-weight: bold\">[(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>,  <a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">228927557.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py#159\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">159</span></a>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)</span>, <span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span><span style=\"font-weight: bold\">)]</span>                                                            <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                </span>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span>         Starting Region Values: <span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">8</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">5</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">6</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">9</span><span style=\"font-weight: bold\">]</span>                            <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                </span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m          \u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Starting Region Indices: \u001b[1m[\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m8\u001b[0m, \u001b[1;36m8\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m8\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m7\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m6\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m6\u001b[0m, \u001b[1;36m8\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m5\u001b[0m, \u001b[1;36m8\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m5\u001b[0m,  \u001b]8;id=266141;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py\u001b\\\u001b[2m228927557.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=838353;file://C:\\Users\\benton.tripp\\AppData\\Local\\Temp\\ipykernel_17712\\228927557.py#159\u001b\\\u001b[2m159\u001b[0m\u001b]8;;\u001b\\\n",
-       "\u001b[2;36m           \u001b[0m         \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m4\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m, \u001b[1m(\u001b[0m\u001b[1;36m3\u001b[0m, \u001b[1;36m7\u001b[0m\u001b[1m)\u001b[0m\u001b[1m]\u001b[0m                                                            \u001b[2m                \u001b[0m\n",
-       "\u001b[2;36m           \u001b[0m         Starting Region Values: \u001b[1m[\u001b[0m\u001b[1;36m2\u001b[0m, \u001b[1;36m4\u001b[0m, \u001b[1;36m3\u001b[0m, \u001b[1;36m7\u001b[0m, \u001b[1;36m8\u001b[0m, \u001b[1;36m5\u001b[0m, \u001b[1;36m6\u001b[0m, \u001b[1;36m1\u001b[0m, \u001b[1;36m9\u001b[0m\u001b[1m]\u001b[0m                            \u001b[2m                \u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2  3  4  5  6  7  8  9]\n",
-      " [ 4  5  6  7  8  9  1  2  3]\n",
-      " [ 7  8  9  1  2  3  4  5  6]\n",
-      " [ 2  1  4  3  6  5  8 -1  7]\n",
-      " [ 3  6  5  8  9  7  2 -1  4]\n",
-      " [ 8  9  7  2  1  4  3 -1 -1]\n",
-      " [ 5  3  1  6  4  2  9 -1 -1]\n",
-      " [ 6  4  2  9  7  8  5 -1  1]\n",
-      " [ 9  7  8  5  3  1  6 -1 -1]]\n"
+     "ename": "NameError",
+     "evalue": "name 'PUZZLE_GEN_START_TIME' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\benton.tripp\\Box\\Benton Tripp\\Personal\\irregular-enigma\\tests\\test.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 179>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=176'>177</a>\u001b[0m \u001b[39m# start w/ random corner\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=177'>178</a>\u001b[0m corner \u001b[39m=\u001b[39m random_corner(size)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=178'>179</a>\u001b[0m \u001b[39mif\u001b[39;00m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m PUZZLE_GEN_START_TIME \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m TIMEOUT:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=179'>180</a>\u001b[0m     region_i \u001b[39m=\u001b[39m gen_random_region(x, size)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/benton.tripp/Box/Benton%20Tripp/Personal/irregular-enigma/tests/test.ipynb#W0sZmlsZQ%3D%3D?line=180'>181</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'PUZZLE_GEN_START_TIME' is not defined"
      ]
     }
    ],
@@ -90,7 +56,7 @@
     "\n",
     "\n",
     "global PUZZLE_GEN_START_TIME, TIMEOUT\n",
-    "TIMEOUT = 10\n",
+    "TIMEOUT = 2\n",
     "\n",
     "size = 9\n",
     "x = np.array([[1, 2, 3, 4, 5, 6, 7, 8, 9], \n",
@@ -140,8 +106,11 @@
     "    return [(y, x) for y, x in zip(gen_lower_right_y(size), gen_lower_right_x(size))]\n",
     "\n",
     "\n",
-    "def random_corner(size):\n",
-    "    return choice([(0, 0), (0, size-1), (size-1, 0), (size-1, size-1)])\n",
+    "def random_corner(size, exclude_corners=list()):\n",
+    "    try:\n",
+    "        return choice([c for c in [(0, 0), (0, size-1), (size-1, 0), (size-1, size-1)] if c not in exclude_corners]), exclude_corners\n",
+    "    except:\n",
+    "        Exception('There are no possible corners that work given this arrangement')\n",
     "\n",
     "def get_adjacent(tri_ind):\n",
     "    adjacent = dict()\n",
@@ -160,9 +129,9 @@
     "        if p.area < 9:\n",
     "            return True\n",
     "\n",
-    "def gen_random_region(x, size):\n",
+    "def gen_random_region(x, size, exclude_corners=list()):\n",
     "    # start w/ random corner\n",
-    "    corner = random_corner(size)\n",
+    "    corner, exclude_corners = random_corner(size, exclude_corners=exclude_corners)\n",
     "    # pick a random direction to start, generate available indices and their adjacent indices\n",
     "    if corner == (0, 0):\n",
     "        logger.info('Starting corner is UL')\n",
@@ -203,10 +172,7 @@
     "    region_i = [corner, start]\n",
     "    region_v = [x[corner], x[start]]\n",
     "    next = 2\n",
-    "    PUZZLE_GEN_START_TIME = time.time()\n",
     "    while next < size:\n",
-    "        if time.time() - PUZZLE_GEN_START_TIME >= TIMEOUT:\n",
-    "            raise TimeoutError\n",
     "        # get adjacent\n",
     "        next_ind = [i for i in adj[region_i[next - 1]] if i not in region_i and x[i] not in region_v and tuple(region_i + [i]) not in exclude]\n",
     "        if len(next_ind) == 0:\n",
@@ -217,11 +183,13 @@
     "            elif len(region_i) == 2 and len(start_choices) == 1:\n",
     "                logger.info('RESETTING START CHOICE:\\nregion_i: {};\\nregion_v: {};'.format(region_i, region_v))\n",
     "                exclude.append(tuple(region_i))\n",
-    "                start = start_choices[0]\n",
+    "                start = start_choices.pop(0)\n",
     "                region_i = [corner, start]\n",
     "                region_v = [x[corner], x[start]]\n",
     "            else:\n",
-    "                raise Exception('There are no possible solutions given this arrangement')\n",
+    "                exclude_corners.append(corner)\n",
+    "                logger.info('EXCLUDING CORNER(S): {};'.format(exclude_corners))\n",
+    "                return gen_random_region(x, size, exclude_corners=exclude_corners)\n",
     "        else:\n",
     "            next_ind = choice(next_ind)\n",
     "            region_i.append(next_ind)\n",
@@ -238,67 +206,17 @@
     "    return region_i\n",
     "\n",
     "print(x)\n",
-    "region_i = gen_random_region(x, size)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 1, 1]])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# start w/ random corner\n",
+    "corner = random_corner(size)\n",
+    "PUZZLE_GEN_START_TIME = time.time()\n",
+    "if time.time() - PUZZLE_GEN_START_TIME >= TIMEOUT:\n",
+    "    region_i = gen_random_region(x, size)\n",
+    "    raise TimeoutError\n",
+    "\n",
+    "for i in region_i:\n",
+    "    x[i] = -1\n",
     "(x == -1) + 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "({'type': 'Polygon', 'coordinates': [[(0.0, 0.0), (0.0, 9.0), (7.0, 9.0), (7.0, 3.0), (8.0, 3.0), (8.0, 5.0), (9.0, 5.0), (9.0, 0.0), (0.0, 0.0)]]}, 0.0)\n",
-      "POLYGON ((0 0, 0 9, 7 9, 7 3, 8 3, 8 5, 9 5, 9 0, 0 0))\n",
-      "({'type': 'Polygon', 'coordinates': [[(7.0, 3.0), (7.0, 9.0), (9.0, 9.0), (9.0, 8.0), (8.0, 8.0), (8.0, 7.0), (9.0, 7.0), (9.0, 5.0), (8.0, 5.0), (8.0, 3.0), (7.0, 3.0)]]}, 1.0)\n",
-      "POLYGON ((7 3, 7 9, 9 9, 9 8, 8 8, 8 7, 9 7, 9 5, 8 5, 8 3, 7 3))\n",
-      "({'type': 'Polygon', 'coordinates': [[(8.0, 7.0), (8.0, 8.0), (9.0, 8.0), (9.0, 7.0), (8.0, 7.0)]]}, 0.0)\n",
-      "POLYGON ((8 7, 8 8, 9 8, 9 7, 8 7))\n"
-     ]
-    }
-   ],
-   "source": [
-    "for shape in rasterio.features.shapes((x == -1) + 0):\n",
-    "    print(shape)\n",
-    "    print(shapely.geometry.Polygon(shape[0][\"coordinates\"][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
